# FreezeFrame

./: LICENSE  README.md  __init__.py  nodes.py  pyproject.toml
.github/: copilot-instructions.md
js/: pausing_bridge.js
