[project]
name = "freezeframe"
description = "Modifed Sampler nodes that allow you to pause/resume generations. For those with older hardware running in CPU mode or old GPUs. Useful for managing thermals."
version = "1.0.1"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/c0dezer019/FreezeFrame"

[tool.comfy]
PublisherId = "c0dezer019"
DisplayName = "FreezeFrame"
Icon = ""
