[project]
name = "freezeframe"
description = "Modifed Sampler nodes that allow you to pause/resume generations. For those with older hardware running in CPU mode or old GPUs. Useful for managing thermals."
version = "1.1.1"
license = {file = "LICENSE"} 

[project.urls]
Repository = "https://github.com/c0dezer019/FreezeFrame"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/c0dezer019/FreezeFrame/wiki"
"Bug Tracker" = "https://github.com/c0dezer019/FreezeFrame/issues"

[tool.comfy]
PublisherId = "c0dezer019"
DisplayName = "FreezeFrame"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

